# mAIcro

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  ask.py  docker-compose.dev.yml  docker-compose.yml  ingest.py  main.py  prometheus.yml  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml  release.yml
app/: cli.py  main.py
app/api/: dependencies.py  error_handlers.py  routes.py
app/api/routes/: health.py  ingest.py  query.py
app/api/v1/: __init__.py  route.py
app/core/: agent_engine.py  config.py  discord_fetcher.py  embeddings.py  ingestion.py  llm_provider.py  prompt_template.py  test_config.py  vector_store.py
app/models/: schemas.py
app/observability/: __init__.py  metrics.py  tracing.py
app/promts/: promts.py
app/schemas/: documents.py
app/services/: ingestion_service.py  qa_service.py  query_service.py
app/services/ai/: __init__.py  gemini_provider.py  llm_provider.py  openai_provider.py  promt.py  test_geminiprovider.py  test_openai.py
app/services/ingestors/: discord_extract.py  embed_to_vectordb.py  test.py
app/services/ingestors/annonces/: ai_annonce.html  arival_annonce.html  chillin_annonce.html  dev_annonce.html  it_annonce.html  itrobotic_annonce.html  welcome_week_annonce.html
app/services/ingestors/annonces_md/: ai_annonce.md  (+7 more)
app/services/knowledge/: retrieval_service.py
data/: announcements.json  ingestion_state.json
data/qdrant/: meta.json
docker/: Dockerfile  docker-compose.yml
docs/: tracing-dashboard.md
grafana/dashboards/: maicro-overview.json
grafana/provisioning/dashboards/: dashboards.yml
local_qdrant/: meta.json
local_qdrant/collection/microclub_knowledge/: storage.sqlite
src/: main.py
src/api/: error_handlers.py  routes.py  schemas.py
src/core/: audit.py  config.py  discord_fetcher.py  discord_listener.py  hybrid_search.py  ingestion.py  llm_provider.py  log.py  logging_config.py  prompt_template.py  security.py  state.py  vector_store.py
src/maicro/: cli.py  main.py
src/maicro/api/: error_handlers.py  routes.py  schemas.py
src/maicro/core/: audit.py  config.py  discord_fetcher.py  discord_listener.py  embeddings.py  hybrid_search.py  ingestion.py  llm_provider.py  logging.py  prompt_template.py  state.py  vector_store.py
src/maicro/services/: qa_service.py
src/services/: qa_service.py
tests/: .gitkeep  conftest.py  test_api_routes.py  test_geminiprovider.py  test_llm_provider.py  test_payload_conversion.py  test_prompt.py  test_promt.py  test_vector_store.py
tests/api/: test_routes.py
tests/unit/: test_audit.py  test_discord_listener.py  test_hybrid_search.py  test_ingestion.py  test_llm_provider.py  test_qa_service.py
(+1 files in other folders)
